@@ -1,3 +1,8 @@
+2002-02-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03064] Re: SELECTED form value
+	* form.c (formResetBuffer): set inititial value
+
 2002-02-23  HIDAI Ken-ichi <hidai@nmn.jp>
 
 	* [w3m-dev 03060] doc-jp/README.migemo
@@ -2986,4 +2991,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.323 2002/02/22 17:59:51 ukai Exp $
+$Id: ChangeLog,v 1.324 2002/02/25 15:40:03 ukai Exp $
